# fastmcpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  format-check.yml
cmake/: copy_if_exists.cmake
examples/: client_api.cpp  client_quick_start.cpp  complex_inputs.cpp  config_server.cpp  context_elicitation.cpp  context_introspection.cpp  instructions_server.cpp  mcp_apps.cpp  openapi_provider.cpp  response_limiting_middleware.cpp  serializer.cpp  server_metadata.cpp  server_quick_start.cpp  simple_echo.cpp  skills_provider.cpp  sse_elicitation_server.cpp  sse_inspector_test.cpp  sse_robustness.cpp  stdio_instructions_server.cpp  stdio_log_file.cpp  stdio_mcp_server.cpp  streaming_demo.cpp  streaming_post_demo.cpp  tags_example.cpp  tool_injection_middleware.cpp
include/: fastmcpp.hpp
include/fastmcpp/: app.hpp  content.hpp  exceptions.hpp  proxy.hpp  settings.hpp  telemetry.hpp  types.hpp  version.hpp
include/fastmcpp/client/: client.hpp  sampling.hpp  sampling_handlers.hpp  transports.hpp  types.hpp
include/fastmcpp/mcp/: handler.hpp  tasks.hpp
include/fastmcpp/prompts/: manager.hpp  prompt.hpp
include/fastmcpp/providers/: component_registry.hpp  filesystem_provider.hpp  local_provider.hpp  openapi_provider.hpp  provider.hpp  skills_provider.hpp
include/fastmcpp/providers/transforms/: catalog.hpp  namespace.hpp  prompts_as_tools.hpp  resources_as_tools.hpp  tool_transform.hpp  transform.hpp  version_filter.hpp  visibility.hpp
include/fastmcpp/resources/: manager.hpp  resource.hpp  template.hpp  types.hpp
include/fastmcpp/server/: context.hpp  elicitation.hpp  http_server.hpp  middleware.hpp  middleware_pipeline.hpp  ping_middleware.hpp  response_limiting_middleware.hpp  sampling.hpp  security_middleware.hpp  server.hpp  session.hpp  sse_server.hpp  stdio_server.hpp  streamable_http_server.hpp
include/fastmcpp/tools/: manager.hpp  tool.hpp  tool_transform.hpp
include/fastmcpp/util/: json.hpp  json_schema.hpp  json_schema_type.hpp  pagination.hpp  schema_build.hpp  versions.hpp
src/: app.cpp  proxy.cpp  settings.cpp  telemetry.cpp  types.cpp
src/cli/: main.cpp
src/client/: client.cpp  sampling_handlers.cpp  transports.cpp
src/internal/: process.cpp  process.hpp  process_posix.cpp  process_win32.cpp
src/mcp/: handler.cpp  tasks.cpp
src/prompts/: manager.cpp  prompt.cpp
src/providers/: filesystem_provider.cpp  openapi_provider.cpp  skills_provider.cpp
src/providers/transforms/: namespace.cpp  prompts_as_tools.cpp  resources_as_tools.cpp  tool_transform.cpp  version_filter.cpp  visibility.cpp
src/resources/: manager.cpp  resource.cpp  template.cpp
src/server/: context.cpp  elicitation.cpp  http_server.cpp  middleware.cpp  ping_middleware.cpp  response_limiting_middleware.cpp  sampling.cpp  security_middleware.cpp  server.cpp  sse_server.cpp  stdio_server.cpp  streamable_http_server.cpp
src/tools/: manager.cpp  tool.cpp
src/util/: json_schema.cpp  json_schema_type.cpp  schema_build.cpp
tests/: client_api.cpp  client_transports.cpp  content.cpp  integration.cpp  json_schema.cpp  json_types.cpp  mcp_handler.cpp  mcp_server.cpp  mcp_server_handler.cpp  mcp_server_toolmanager.cpp  prompts.cpp  schema_build.cpp  server_lifecycle.cpp  server_middleware.cpp  server_sse_mcp_format.cpp  settings.cpp  smoke.cpp  stdio_client.cpp  stdio_server.cpp  streaming_sse.cpp  tools.cpp  ws_streaming.cpp  ws_streaming_local.cpp
tests/app/: custom_route_forwarding.cpp  ergonomics.cpp  mcp_apps.cpp  mounting.cpp
tests/cli/: generated_cli_e2e.cpp  tasks_cli.cpp
tests/client/: api_advanced.cpp  api_basic.cpp  api_icons.cpp  http_client_security.cpp  sampling_handlers.cpp  sse_session_client.cpp  tasks.cpp  test_audio_content.cpp  test_helpers.hpp  transports.cpp
tests/fs/: provider.cpp  test_plugin.cpp
tests/main_header/: compile_test.cpp
tests/mcp/: handler.cpp  server.cpp  server_handler.cpp  server_toolmanager.cpp  test_error_codes.cpp  test_instructions.cpp  test_pagination.cpp
tests/more/: resources_advanced.cpp  tools_advanced.cpp
tests/prompts/: basic.cpp
tests/providers/: catalog_dedup.cpp  openapi_provider.cpp  skills_path_resolution.cpp  skills_provider.cpp  transforms.cpp  version_filter.cpp
tests/proxy/: basic.cpp
tests/resources/: advanced.cpp  basic.cpp  template_query_params.cpp  templates.cpp
tests/schema/: build.cpp  dereference_toggle.cpp  json_schema.cpp  type_basic.cpp  type_composite.cpp  type_constraints.cpp
tests/server/: auth_cors_security.cpp  basic.cpp  context_meta.cpp  http_auth.cpp  http_integration.cpp  interactions.cpp  interactions_fixture.hpp  interactions_helpers.cpp  interactions_helpers.hpp  interactions_helpers_p1.cpp  interactions_helpers_p2.cpp  interactions_helpers_p3.cpp  interactions_helpers_p4.cpp  interactions_helpers_p5.cpp  interactions_p1.cpp  interactions_p2.cpp  interactions_p3.cpp  interactions_p4.cpp  interactions_p5.cpp  interactions_p6.cpp  interactions_part1.cpp  interactions_part2.cpp  interactions_part2a.cpp  interactions_part2b.cpp  interactions_part3.cpp  middleware.cpp  patterns.cpp  security_limits.cpp  security_middleware.cpp  sse.cpp  sse_bidirectional_requests.cpp  sse_http_integration.cpp  sse_mcp_format.cpp  sse_session_security.cpp  sse_tasks_notifications.cpp  streamable_http_integration.cpp  streaming_sse.cpp  test_context_full.cpp  test_context_sampling.cpp  test_context_sse_integration.cpp  (+6 more)
tests/telemetry/: tracing.cpp
tests/tools/: basic.cpp  edge_cases.cpp  test_tool_manager.cpp  test_tool_sequential.cpp  test_tool_timeout.cpp  test_tool_transform.cpp  test_tool_transform_enabled.cpp  test_tool_transform_extended.cpp  validation.cpp
tests/transports/: post_streaming.cpp  stdio_client.cpp  stdio_failure.cpp  stdio_instructions_e2e.cpp  stdio_lifecycle.cpp  stdio_server.cpp  stdio_stderr.cpp  stdio_timeout.cpp  ws_streaming.cpp  ws_streaming_local.cpp
